k8s/platform/postgres/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: postgres
  namespace: platform

spec:
  clusterIP: None
  selector: { app: postgres }
  ports:
    - port: 5432
